intermediate improvement of mediation_triad

--- a/inst/doc/connect.Rmd
+++ b/inst/doc/connect.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 This is an example of installing a package from github via Rstudio Connect.
-This code is in `inst/doc` folder of the `byandell/intermediate` package, and installs the intermediate package.
+This code is in `inst/doc` folder of the `byandell/intermediate` package, and installs the intermediate package. See [RStudio Connect Git-Backed Content](https://docs.rstudio.com/connect/user/git-backed/)
 
 Larger goal is to run a shiny app in package `byandell/qtl2shiny`, which depends on this package and on `byandell/qtl2mediate`, as well as other packages on CRAN.
 
